<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.com-->
<resources>
  <string name="app_name">ADB Manager</string>
  <string name="wakelock">WakeLock</string>
  <string name="acquired">Acquired</string>
  <string name="released">Released</string>
  <string name="unknown">Unknown</string>
  <string name="app_settings">Settings</string>
  <string name="app_wifi_list">WiFi List</string>
  <string name="action_settings">Settings</string>
  <string name="adb_status">Network ADB Status</string>
  <string name="status">Status</string>
  <string name="clear">Clear</string>
  <string name="service">Service</string>
  <string name="running">Running</string>
  <string name="stopped">Stopped</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="refresh">Refresh</string>
  <string name="address">Address</string>
  <string name="forward_slash">/</string>
  <string name="backward_slash">\</string>
  <string name="colon">:</string>
  <string name="start_service">Start service</string>
  <string name="stop_service">Stop service</string>
  <string name="start_adb_network">Start Network ADB</string>
  <string name="stop_adb_network">Stop Network ADB</string>
  <string name="adb">ADB</string>
  <string name="info">info</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="label">label</string>
  <string name="about">About</string>
  <string name="no_data">No data available</string>
  <string name="change_log">Change Log</string>
  <string name="service_name">ADB Manager Service</string>
  <string name="service_description">Used to start/stop the ADB process, and present a notification on the notification bar about the state of ADB.</string>
  <string name="settings_reset">Reset settings</string>
  <string name="settings_reset_summary">This will reset all the values to the default values for the application.</string>
  <string name="settings_reset_button_dialog_title">Reset</string>
  <string name="settings_reset_button_dialog_message">This will reset the application to it\'s default values, this action is IRREVERSIBLE.</string>
  <string name="service_general">General</string>
  <string name="service_show_notifications">Notification bar</string>
  <string name="service_show_notifications_on">Will display a notification bar while running.</string>
  <string name="service_show_notifications_off">Will not display a notification bar while running.</string>
  <string name="service_hideable_notification_bar">Notification hideable</string>
  <string name="service_hideable_notification_bar_on">You can remove the notification by swiping it away.</string>
  <string name="service_hideable_notification_bar_off">Notification is permanent cannot be removed.</string>
  <string name="service_general_settings">Service</string>
  <string name="service_general_start_on_boot">Start on boot</string>
  <string name="service_general_start_on_boot_enabled">Will start the service on startup of the device.</string>
  <string name="service_general_start_on_boot_disabled">Will not start the service on the startup of the device.</string>
  <string name="service_general_start_delay">Startup delay</string>
  <string name="service_general_start_delay_summary">We will start the service in %s after boot.</string>
  <string name="service_general_alarm_timeout">Alarm timeout</string>
  <string name="service_general_alarm_timeout_summary">We will recheck if the service is running every %s.</string>
  <string name="service_settings_start_adb_off">Will not autostart the ADB service on known wifi networks</string>
  <string name="service_settings_start_adb_on">Will autostart the ADB service on known wifi networks</string>
  <string name="service_settings_start_adb">WiFi</string>
  <string name="service_settings_adb_port">ADB Port</string>
  <string name="service_settings_adb_port_summary">ADB will listen on port %d for connections (1024–49151).</string>
  <string name="settings_wifi_list">WiFi Autostart List</string>
  <string name="settings_wifi_list_summary">A list of wireless connection to which we should automatically start ADB on network.</string>
  <string name="main_adb_command">adb connect %1$s:%2$s</string>
  <string name="ip_and_port">%1$s:%2$s</string>
  <string name="no_net_connection">No network connection available</string>
  <string name="root">Root</string>
  <string name="use_root_off">Will try to work without using root.</string>
  <string name="use_root_on">Will work normally with using root.</string>
  <string name="widget">Widget</string>
  <string name="adb_widget">ADB Manager Widget</string>
  <string name="keep_screen_on">Keep screen on</string>
  <string name="keep_screen_on_on">Keep screen on while the ADB service is running</string>
  <string name="keep_screen_on_off">Will not keep the screen on while the ADB service is running</string>
  <string name="wake_on_new_package">Wake up on install</string>
  <string name="wake_on_new_package_on">Wakes up the screen when a new package has been added to the device</string>
  <string name="wake_on_new_package_off">Does not wake up the screen when a new package has been added to the device</string>
  <string name="status_adb_service_not_running">ADB service is not running</string>
  <string name="status_no_wifi_connection">No WiFi connection</string>
  <string name="status_adb_service_running">ADB service is running</string>
  <string name="status_wifi_connection_available">WiFi connection available</string>
  <string name="item_widget_update">The widget with id: %s has been updated</string>
  <string name="item_no_wifi_connection_available">No WiFi connection available</string>
  <string name="item_check_if_we_have_valid_connection">Checking if we have a valid connection to the auto connect list for WiFi?</string>
  <string name="item_wifi_auto_connect_list_empty">WiFi auto connect list is empty</string>
  <string name="item_retrieve_ssid_failed">Couldn\'t retrieve the SSID for the WiFi network</string>
  <string name="item_wifi_network_in_list">WiFi network \'%s\' is in the auto connect list</string>
  <string name="item_wifi_network_not_in_list">WiFi network \'%s\' not in the auto connect list</string>
  <string name="item_triggered_notification_update">Triggered notification update: %s</string>
  <string name="item_use_root">Use root: %s</string>
  <string name="item_no_su_access">No superuser access available</string>
  <string name="item_executing_commands">Executing commands</string>
  <string name="item_root_access_denied">Root access denied</string>
  <string name="item_executing_command">Executing command: %s</string>
  <string name="item_fail_retrieve_network_status">Couldn\'t retrieve the adb network status</string>
  <string name="item_network_status">Network status: %s</string>
  <string name="item_acquired_wake_lock">Wake lock acquired: %s</string>
  <string name="item_released_wake_lock">Wake lock released: %s</string>
  <string name="item_no_need_for_wake_lock">There is no need to acquire wake lock</string>
  <string name="item_try_to_wake_phone">Trying to wake up the phone screen</string>
  <string name="item_service_bind_succesfully">Service binded successfully</string>
  <string name="item_service_bind_failed">Service failed to bind successfully</string>
  <string name="item_service_unbind_succesfully">Service unbinded successfully</string>
  <string name="item_service_unbind_failed">Service failed to unbind successfully</string>
  <string name="item_initializiation_of_manager">Initialization of ADB Manager</string>
  <string name="item_menu_item_loaded">Menu items loaded</string>
  <string name="item_openning_item">Openning item %s</string>
  <string name="item_adb_manager_paused">ADB Manager activity paused</string>
  <string name="item_adb_manager_resumed">ADB Manager activity resumed</string>
  <string name="item_update_screen_based_on_state_result">Updating screen details based on state result: %s</string>
  <string name="item_update_screen_details">Updating screen details, check network state: %1$b, supplied network state: %2$s</string>
  <string name="settings_clear_wifi_list">Clear WiFi list</string>
  <string name="settings_clear_wifi_list_summary">Clear all the wifi\'s you have collected by now, this will repopulate the data on the next opening of WiFi list</string>
  <string name="dialog_settings_wifi_list">This will reset your known WiFi list, and make sure on next load to repopuplate from the available networks. Are you sure you want to reinitialize the list?</string>
  <string name="language_title">Language</string>
  <string name="language_description">Current language: %s</string>
  <string name="help_translate_button">Help translate</string>
  <string name="help_translate_button_summary">By opening this link you will help me and you translate this application in your preferred language</string>
  <string name="quit">Quit</string>
  <string name="action_autostart_adb">Autostart ADB on</string>
  <string name="service_settings_autostart_eth">Ethernet</string>
  <string name="service_settings_autostart_mobile">Mobile</string>
</resources>
