<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/service_general_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="start_on_boot"
            android:persistent="true"
            android:summaryOff="@string/service_general_start_on_boot_disabled"
            android:summaryOn="@string/service_general_start_on_boot_enabled"
            android:title="@string/service_general_start_on_boot" />

        <ListPreference
            android:defaultValue="10"
            android:dependency="start_on_boot"
            android:entries="@array/time_delay_entires"
            android:entryValues="@array/time_delay_values"
            android:key="start_delay"
            android:persistent="true"
            android:summary="@string/service_general_start_delay_summary"
            android:title="@string/service_general_start_delay" />
        <ListPreference
            android:defaultValue="7200"
            android:dependency="start_on_boot"
            android:entries="@array/time_delay_entires"
            android:entryValues="@array/time_delay_values"
            android:key="alarm_timeout_interval"
            android:persistent="true"
            android:summary="@string/service_general_alarm_timeout_summary"
            android:title="@string/service_general_alarm_timeout" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_notifications"
            android:persistent="true"
            android:summaryOff="@string/service_show_notifications_off"
            android:summaryOn="@string/service_show_notifications_on"
            android:title="@string/service_show_notifications" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="show_notifications"
            android:key="hideable_notification_bar"
            android:persistent="true"
            android:summaryOff="@string/service_hideable_notification_bar_off"
            android:summaryOn="@string/service_hideable_notification_bar_on"
            android:title="@string/service_hideable_notification_bar" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_root"
            android:persistent="true"
            android:summaryOff="@string/use_root_off"
            android:summaryOn="@string/use_root_on"
            android:title="@string/root" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="keep_screen_on"
            android:persistent="true"
            android:summaryOff="@string/keep_screen_on_off"
            android:summaryOn="@string/keep_screen_on_on"
            android:title="@string/keep_screen_on" />
        <CheckBoxPreference
            defaultValue="false"
            android:dependency="keep_screen_on"
            android:key="wake_on_new_package"
            android:persistent="true"
            android:summaryOff="@string/wake_on_new_package_off"
            android:summaryOn="@string/wake_on_new_package_on"
            android:title="@string/wake_on_new_package" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/action_settings" >
        <EditTextPreference
            android:defaultValue="5555"
            android:inputType="number"
            android:key="adb_port"
            android:persistent="true"
            android:summary="@string/service_settings_adb_port_summary"
            android:title="@string/service_settings_adb_port" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_start_on_known_wifi"
            android:persistent="true"
            android:summaryOff="@string/service_settings_start_adb_off"
            android:summaryOn="@string/service_settings_start_adb_on"
            android:title="@string/service_settings_start_adb" />

        <Preference
            android:dependency="auto_start_on_known_wifi"
            android:key="wifi_button"
            android:persistent="false"
            android:summary="@string/settings_wifi_list_summary"
            android:title="@string/settings_wifi_list" />
        <Preference
            android:key="reset_wifi_list_button"
            android:persistent="false"
            android:summary="@string/settings_clear_wifi_list_summary"
            android:title="@string/settings_clear_wifi_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/service_general" >
        <ListPreference
            android:entries="@array/languages_long"
            android:entryValues="@array/languages_codes"
            android:defaultValue="en_US"
            android:key="language"
            android:persistent="true"
            android:summary="@string/language_description"
            android:title="@string/language_title" />

        <Preference
            android:key="help_translate_button"
            android:persistent="false"
            android:summary="@string/help_translate_button_summary"
            android:title="@string/help_translate_button" />
        
        <Preference
            android:key="reset_button"
            android:persistent="false"
            android:summary="@string/settings_reset_summary"
            android:title="@string/settings_reset" />
    </PreferenceCategory>

</PreferenceScreen>